--- a/.htaccess
+++ b/.htaccess
@@ -6,10 +6,10 @@
   #  http://www.example.com/mypage/test1
   # then use
   # RewriteBase /mypage/test1/
-  RewriteBase /Monocyber2/
+  RewriteBase /Monocyber2
   RewriteCond %{REQUEST_FILENAME} !-f
   RewriteCond %{REQUEST_FILENAME} !-d
-  RewriteRule ^(.*)$ index.php?/$1 [L]
+  RewriteRule ^(.*)$ /monocyber2/index.php?/$1 [L]
 </IfModule>
 
 <IfModule !mod_rewrite.c>
